home page mobile design complete

--- a/index.html
+++ b/index.html
@@ -35,52 +35,55 @@
     <section id="projects">
         <h3>What I've Made</h3>
         <div class="projects grid">
-            <a href="#"><img src="assets/weather.png"><h4>ScriptWeather</h4></a>
-            <a href="#"><img src="assets/scrapbook.png"><h4>StickyNote Scrapbook</h4></a>
-            <a href="#"><img src="assets/tutor1.png"><h4>Private Tuition Website</h4></a>
-            <a href="#"><img src="assets/music.png"><h4>Music History Website</h4></a>
+            <a href="weather.html"><img src="assets/weather.png"><h4>ScriptWeather</h4></a>
+            <a href="scrapbook.html"><img src="assets/scrapbook.png"><h4>StickyNote Scrapbook</h4></a>
+            <a href="tutor.html"><img src="assets/tutor1.png"><h4>Private Tuition Website</h4></a>
+            <a href="music.html"><img src="assets/music.png"><h4>Music History Website</h4></a>
         </div>
     </section>
 
-    <div class="divider grid">
-        <img src="assets/divider.png">
+    <div class="grid">
+        <div class="divider">
+            <img src="assets/divider.png">
+        </div>
     </div>
 
     <section id="skills">
         <h3>What I Can Use</h3>
         <div class="skills grid">
-            <ul>
-                <li><img src="assets/html.png"></li>
-                <li><img src="assets/css.png"></li>
-                <li><img src="assets/javascript.png"></li>
-                <li><img src="assets/php.png"></li>
-                <li><img src="assets/python.png"></li>
-                <li><img src="assets/cplusplus.png"></li>
-                <li><img src="assets/sql.png"></li>
-            </ul>
+            <img src="assets/html.png">
+            <img src="assets/css.png">
+            <img src="assets/javascript.png">
+            <img src="assets/php.png">
+            <img src="assets/python.png">
+            <img src="assets/cplusplus.png">
+            <img src="assets/sql.png">
         </div>
     </section>
 
-    <div class="divider grid">
-        <img src="assets/divider.png">
+    <div class="grid">
+        <div class="divider">
+            <img src="assets/divider.png">
+        </div>
     </div>
 
     <section id="contact">
         <h3>Where To Find Me</h3>
-        <div class="contact grid">
-            <ul>
-                <li><i class="fas fa-envelope"></i>Email<a href="#">emilybrown26343@gmail.com</a></li>
-                <li><i class="fab fa-linkedin"></i>LinkedIn<a href="https://www.linkedin.com/in/emily-brown-5b8a141b1">https://www.linkedin.com/in/emily-brown-5b8a141b1</a></li>
-                <li><i class="fab fa-github-square"></i>GitHub<a href="https://github.com/emilyaisling">https://github.com/emilyaisling</a></li>
-            </ul>
+        <div class="grid">
+            <div class="contact">
+                <ul>
+                    <li><i class="fas fa-envelope"></i>Email<br><a href="#">emilybrown26343@gmail.com</a></li>
+                    <p>...</p>
+                    <li><i class="fab fa-linkedin"></i>LinkedIn<br><a href="https://www.linkedin.com/in/emily-brown-5b8a141b1">https://www.linkedin.com/in/emily-brown-5b8a141b1</a></li>
+                    <p>...</p>
+                    <li><i class="fab fa-github-square"></i>GitHub<br><a href="https://github.com/emilyaisling">https://github.com/emilyaisling</a></li>
+                </ul>
+            </div>
         </div>
     </section>
 
     <footer>
-        <div class="grid">
-            <h3>Emily Brown &copy; 2020</h3>
-            <img src="assets/circle.png">
-        </div>
+        <h3>Emily Brown &copy; 2020</h3>
     </footer>
 </body>
 </html>
