projects page and content created, needs styling

--- a/index.html
+++ b/index.html
@@ -34,11 +34,12 @@
 
     <section id="projects">
         <h3>What I've Made</h3>
+        <h5>Click on a project for more information</h5>
         <div class="projects grid">
-            <a href="weather.html"><img src="assets/weather.png"><h4>ScriptWeather</h4></a>
-            <a href="scrapbook.html"><img src="assets/scrapbook.png"><h4>StickyNote Scrapbook</h4></a>
-            <a href="tutor.html"><img src="assets/tutor1.png"><h4>Private Tuition Website</h4></a>
-            <a href="music.html"><img src="assets/music.png"><h4>Music History Website</h4></a>
+            <a href="projects.html#weather"><img src="assets/weather.png"><h4>ScriptWeather</h4></a>
+            <a href="projects.html#scrapbook"><img src="assets/scrapbook.png"><h4>StickyNote Scrapbook</h4></a>
+            <a href="projects.html#tutor"><img src="assets/tutor1.png"><h4>Private Tuition Website</h4></a>
+            <a href="projects.html#music"><img src="assets/music.png"><h4>Music History Website</h4></a>
         </div>
     </section>
 
