tablet styles complete

--- a/projects.html
+++ b/projects.html
@@ -18,11 +18,11 @@
 
     <section id="work">
         <h2>Projects</h2>
-        <div class="work">
+        <div class="work grid">
             <div class="scrapbook" id="scrapbook">
                 <h3>StickyNote Scrapbook</h3>
                 <img src="assets/scrapbook.png">
-                <ul>
+                <ul class="tech">
                     <li>HTML</li>
                     <li>CSS</li>
                     <li>PHP</li>
@@ -39,7 +39,7 @@
                     had planned and designed all aspects of before begining construction, so I learned to 
                     organise the build into components that could be completed in each session.
                 </p>
-                <ul>
+                <ul class="links">
                     <li><a href="https://sticky-note-scrapbook.herokuapp.com">https://sticky-note-scrapbook.herokuapp.com</a></li>
                     <li><a href="https://github.com/emilyaisling/ScrapbookSite.git">https://github.com/emilyaisling/ScrapbookSite.git</a></li>
                 </ul>
@@ -47,7 +47,7 @@
             <div class="tutor" id="tutor">
                 <h3>Private Tuition Website</h3>
                 <img src="assets/tutor1.png">
-                <ul>
+                <ul class="tech">
                     <li>HTML</li>
                     <li>CSS</li>
                     <li>Materialize</li>
@@ -60,7 +60,7 @@
                     project also introduced me to Materialize and the basics of JQuery. I not only learned 
                     to use the features of the framework but to customise it to my specific design needs.
                 </p>
-                <ul>
+                <ul class="links">
                     <li><a href="https://mbsciencetutor.co.uk">mbsciencetutor.co.uk</a></li>
                     <li><a href="https://github.com/emilyaisling/Tutoring-Website.git">https://github.com/emilyaisling/Tutoring-Website.git</a></li>
                 </ul>
@@ -68,13 +68,13 @@
             <div class="weather" id="weather">
                 <h3>ScriptWeather</h3>
                 <img src="assets/weather.png">
-                <ul>
+                <ul class="tech">
                     <li>HTML</li>
                     <li>CSS</li>
                     <li>JavaScript</li>
                 </ul>
                 <p>This application uses the OpenWeatherMap API to display current weather data, as well as date and time information, in a location entered by the user. From this project, I learned how to interact with an API and process JSON data, as well as developing my knowledge of JavaScript and CSS. I particulary benefited from manipulating date and time data to change the design theme of the application with the time of day.</p>
-                <ul>
+                <ul class="links">
                     <li><a href="https://emilyaisling.github.io/ScriptWeather">https://emilyaisling.github.io/ScriptWeather</a></li>
                     <li><a href="https://github.com/emilyaisling/ScriptWeather.git">https://github.com/emilyaisling/ScriptWeather.git</a></li>
                 </ul>
@@ -82,7 +82,7 @@
             <div class="music" id="music">
                 <h3>Music History Website</h3>
                 <img src="assets/music.png">
-                <ul>
+                <ul class="tech">
                     <li>HTML</li>
                     <li>CSS</li>
                     <li>PHP</li>
@@ -95,7 +95,7 @@
                     systems. The project also began training my eye for web design and developing 
                     consistant layouts.
                 </p>
-                <ul>
+                <ul class="links">
                     <li><a href="https://western-art-music.herokuapp.com">https://western-art-music.herokuapp.com</a></li>
                     <li><a href="https://github.com/emilyaisling/Music-History-Website.git">https://github.com/emilyaisling/Music-History-Website.git</a></li>
                 </ul>
