laptop styles complete

--- a/projects.html
+++ b/projects.html
@@ -39,8 +39,9 @@
                     had planned and designed all aspects of before begining construction, so I learned to 
                     organise the build into components that could be completed in each session.
                 </p>
+                
                 <ul class="links">
-                    <li><a href="https://sticky-note-scrapbook.herokuapp.com">https://sticky-note-scrapbook.herokuapp.com</a></li>
+                    <li><a href="https://sticky-note-scrapbook.herokuapp.com">https://sticky-note-scrapbook.herokuapp.com</a> -username: test -password: password</li>
                     <li><a href="https://github.com/emilyaisling/ScrapbookSite.git">https://github.com/emilyaisling/ScrapbookSite.git</a></li>
                 </ul>
             </div>
@@ -96,7 +97,7 @@
                     consistant layouts.
                 </p>
                 <ul class="links">
-                    <li><a href="https://western-art-music.herokuapp.com">https://western-art-music.herokuapp.com</a></li>
+                    <li><a href="https://western-art-music.herokuapp.com">https://western-art-music.herokuapp.com</a> -username: admin -password: password</li>
                     <li><a href="https://github.com/emilyaisling/Music-History-Website.git">https://github.com/emilyaisling/Music-History-Website.git</a></li>
                 </ul>
             </div>
