desktop styles complete

--- a/projects.html
+++ b/projects.html
@@ -41,8 +41,8 @@
                 </p>
                 
                 <ul class="links">
-                    <li><a href="https://sticky-note-scrapbook.herokuapp.com">https://sticky-note-scrapbook.herokuapp.com</a> -username: test -password: password</li>
-                    <li><a href="https://github.com/emilyaisling/ScrapbookSite.git">https://github.com/emilyaisling/ScrapbookSite.git</a></li>
+                    <li><i class="fas fa-wifi"></i><a href="https://sticky-note-scrapbook.herokuapp.com">https://sticky-note-scrapbook.herokuapp.com</a> -username: test -password: password</li>
+                    <li><i class="fab fa-github-square"></i><a href="https://github.com/emilyaisling/ScrapbookSite.git">https://github.com/emilyaisling/ScrapbookSite.git</a></li>
                 </ul>
             </div>
             <div class="tutor" id="tutor">
@@ -62,8 +62,8 @@
                     to use the features of the framework but to customise it to my specific design needs.
                 </p>
                 <ul class="links">
-                    <li><a href="https://mbsciencetutor.co.uk">mbsciencetutor.co.uk</a></li>
-                    <li><a href="https://github.com/emilyaisling/Tutoring-Website.git">https://github.com/emilyaisling/Tutoring-Website.git</a></li>
+                    <li><i class="fas fa-wifi"></i><a href="https://mbsciencetutor.co.uk">mbsciencetutor.co.uk</a></li>
+                    <li><i class="fab fa-github-square"></i><a href="https://github.com/emilyaisling/Tutoring-Website.git">https://github.com/emilyaisling/Tutoring-Website.git</a></li>
                 </ul>
             </div>
             <div class="weather" id="weather">
@@ -76,8 +76,8 @@
                 </ul>
                 <p>This application uses the OpenWeatherMap API to display current weather data, as well as date and time information, in a location entered by the user. From this project, I learned how to interact with an API and process JSON data, as well as developing my knowledge of JavaScript and CSS. I particulary benefited from manipulating date and time data to change the design theme of the application with the time of day.</p>
                 <ul class="links">
-                    <li><a href="https://emilyaisling.github.io/ScriptWeather">https://emilyaisling.github.io/ScriptWeather</a></li>
-                    <li><a href="https://github.com/emilyaisling/ScriptWeather.git">https://github.com/emilyaisling/ScriptWeather.git</a></li>
+                    <li><i class="fas fa-wifi"></i><a href="https://emilyaisling.github.io/ScriptWeather">https://emilyaisling.github.io/ScriptWeather</a></li>
+                    <li><i class="fab fa-github-square"></i><a href="https://github.com/emilyaisling/ScriptWeather.git">https://github.com/emilyaisling/ScriptWeather.git</a></li>
                 </ul>
             </div>
             <div class="music" id="music">
@@ -97,8 +97,8 @@
                     consistant layouts.
                 </p>
                 <ul class="links">
-                    <li><a href="https://western-art-music.herokuapp.com">https://western-art-music.herokuapp.com</a> -username: admin -password: password</li>
-                    <li><a href="https://github.com/emilyaisling/Music-History-Website.git">https://github.com/emilyaisling/Music-History-Website.git</a></li>
+                    <li><i class="fas fa-wifi"></i><a href="https://western-art-music.herokuapp.com">https://western-art-music.herokuapp.com</a> -username: admin -password: password</li>
+                    <li><i class="fab fa-github-square"></i><a href="https://github.com/emilyaisling/Music-History-Website.git">https://github.com/emilyaisling/Music-History-Website.git</a></li>
                 </ul>
             </div>
         </div>
