--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,7 @@
                 </p>
                 
                 <ul class="links">
-                    <li><i class="fas fa-wifi"></i><a href="https://sticky-note-scrapbook.herokuapp.com">https://sticky-note-scrapbook.herokuapp.com</a> -username: test -password: password</li>
+                    <li><i class="fas fa-wifi"></i><a href="https://sticky-note-scrapbook.herokuapp.com">https://sticky-note-scrapbook.herokuapp.com</a><br> -username: test -password: password</li>
                     <li><i class="fab fa-github-square"></i><a href="https://github.com/emilyaisling/ScrapbookSite.git">https://github.com/emilyaisling/ScrapbookSite.git</a></li>
                 </ul>
             </div>
@@ -97,7 +97,7 @@
                     consistant layouts.
                 </p>
                 <ul class="links">
-                    <li><i class="fas fa-wifi"></i><a href="https://western-art-music.herokuapp.com">https://western-art-music.herokuapp.com</a> -username: admin -password: password</li>
+                    <li><i class="fas fa-wifi"></i><a href="https://western-art-music.herokuapp.com">https://western-art-music.herokuapp.com</a><br> -username: admin -password: password</li>
                     <li><i class="fab fa-github-square"></i><a href="https://github.com/emilyaisling/Music-History-Website.git">https://github.com/emilyaisling/Music-History-Website.git</a></li>
                 </ul>
             </div>
