--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,7 @@
                     Materialize. From this project, I increased my confidence with PHP and learned to 
                     balance Materialize with my own CSS to create my particular design. It was a project I 
                     had planned and designed all aspects of before begining construction, so I learned to 
-                    organise the build into components that could be completed in each session.<br>
+                    organise the build into components that could be completed in each session.<br><br>
                     Username: test<br>
                     Password: test
                 </p>
@@ -94,7 +94,7 @@
                     developing an interest in PHP and MySQL. Through this project, I learned to set up and 
                     interact with databases. This was used to develop the user accounts and commenting 
                     systems. The project also began training my eye for web design and developing 
-                    consistant layouts.<br>
+                    consistant layouts.<br><br>
                     Username: admin<br>
                     Password: password
                 </p>
