--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
                     had planned and designed all aspects of before begining construction, so I learned to 
                     organise the build into components that could be completed in each session.<br><br>
                     Username: test<br>
-                    Password: test
+                    Password: password
                 </p>
                 
                 <ul class="links">
