--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
     <section id="about" class="grid">
         <div class="about-me">
             <h2>Audio Technology & Software Development</h2>
-            <p>Hi, I'm Emily. I'm an audio technology student with a passion for programming. Using skills 
-                I am constantly developing through my degree and personal projects, I hope to progress to a 
-                career in software development.
+            <p>Hi, I'm Emily. I'm an audio technology student with a passion for programming.
             </p>
             <a href="#projects">View my projects</a>
         </div>
